# divide-engine

./: .gitignore  CMakeLists.txt  README.md
include/: window.hpp
include/utils/: logger.hpp
src/: main.cpp  window.cpp
src/utils/: logger.cpp
